Use cypress-drupal matching cypress image version

--- a/drupal/Dockerfile
+++ b/drupal/Dockerfile
@@ -2,4 +2,4 @@ FROM ghcr.io/unb-libraries/einbaum/base:12.x-1.x
 
 COPY ./build/einbaum.config.js /einbaum/einbaum.config.js
 
-RUN npm install github:unb-libraries/cypress-drupal
+RUN npm install https://github.com/unb-libraries/cypress-drupal.git#12.x-9.x-1.x
